[package]
name = "json-colorizer"
version = "0.1.2"
edition = "2024"
description = "A fast, lightweight JSON formatter, pretty-printer, colorizer, and query tool for Rust — with jq-style dot-path queries"
license = "MIT"
readme = "README.md"
keywords = ["json", "formatter", "colorize", "pretty-print", "query"]
categories = ["command-line-utilities", "encoding", "development-tools"]
repository = "https://github.com/mzaryabrafique/json-colorizer"
documentation = "https://docs.rs/json-colorizer"
homepage = "https://crates.io/crates/json-colorizer"

[lib]
name = "json_colorizer"
path = "src/lib.rs"

[[bin]]
name = "json-colorizer"
path = "src/main.rs"

[dependencies]
colored = "3.1.1"
serde_json = "1.0.149"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.149"

[dependencies.clap]
version = "4.6.0"
features = ["derive"]
optional = true

[features]
default = ["cli"]
cli = ["clap"]
